--- a/app/src/main/res/layout/fragment_blocking.xml
+++ b/app/src/main/res/layout/fragment_blocking.xml
@@ -1,157 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
         android:id="@+id/rlt"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize">
+
         <TextView
             android:id="@+id/tv_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="@string/diary"
-            android:textColor="@color/colorPurpleBG"
             android:layout_alignParentBottom="true"
             android:padding="15dp"
-            />
+            android:text="@string/diary"
+            android:textColor="@color/colorPurpleBG"
+            android:textSize="20sp" />
+
         <ImageView
-            android:src="@drawable/ic_search_purple"
+            android:id="@+id/img_btn_search"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_margin="10dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:id="@+id/img_btn_search"/>
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_search_purple" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible"
             android:background="@color/colorWhite"
             android:orientation="vertical"
-            >
-        </LinearLayout>
-        </RelativeLayout>
+            android:visibility="visible"></LinearLayout>
+    </RelativeLayout>
+
     <RelativeLayout
-        android:background="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:id="@+id/lnear_filter"-->
-<!--            android:visibility="visible"-->
-<!--            >-->
-<!--            <ImageView-->
-<!--                android:src="@drawable/ic_arrow_back"-->
-<!--                android:layout_width="35dp"-->
-<!--                android:layout_height="35dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:layout_alignParentRight="true"-->
-<!--                android:layout_alignParentBottom="true"-->
-<!--                android:id="@+id/img_btn_back"/>-->
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:background="@drawable/background_search"-->
-<!--                >-->
-<!--                <EditText-->
-<!--                    android:focusable="true"-->
-<!--                    android:background="@drawable/background_search"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textSize="15sp"-->
+        android:background="@color/colorWhite"></RelativeLayout>
 
-<!--                    android:hint="@string/input"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:paddingLeft="15dp"-->
-<!--                    android:id="@+id/edt_search"-->
-<!--                    />-->
-<!--            </LinearLayout>-->
-<!--        </LinearLayout>-->
-    </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/rlt_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/rlt"
-        android:id="@+id/rlt_bar"
-        >
+        android:layout_below="@+id/rlt">
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_block"
-            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-            app:tabSelectedTextColor="@color/colorPurpleBG"
-            app:tabTextColor="#CDCDCD"
+            android:visibility="visible"
             app:tabIndicatorColor="@color/colorPurpleBG"
-            />
-<!--        <LinearLayout-->
-<!--            android:id="@+id/lnear_filter_search"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:background="@color/colorHideSlide"-->
-<!--            android:visibility="gone"-->
-<!--            >-->
-<!--            <LinearLayout-->
-<!--                android:weightSum="2"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="?attr/actionBarSize"-->
-<!--                android:background="@color/colorWhite"-->
-<!--                android:orientation="horizontal"-->
+            app:tabSelectedTextColor="@color/colorPurpleBG"
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+            app:tabTextColor="#CDCDCD" />
 
-<!--                >-->
-<!--                <TextView-->
-<!--                    android:id="@+id/tv_displayed_diary"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textSize="15sp"-->
-<!--                    android:gravity="center_horizontal"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:text="@string/diary_filter_number"/>-->
-<!--                <TextView-->
-<!--                    android:id="@+id/tv_displayed_block"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textSize="15sp"-->
-<!--                    android:gravity="center_horizontal"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:text="@string/blocked_filter_number"/>-->
-<!--            </LinearLayout>-->
-<!--        </LinearLayout>-->
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/rlt_rcl_filter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp">
+
         <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/view"/>
-<!--        <LinearLayout-->
-<!--            android:id="@+id/lnear_rcl_filter"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical"-->
-<!--            android:visibility="visible"-->
-<!--            >-->
-<!--            <androidx.recyclerview.widget.RecyclerView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
-<!--                android:background="@color/colorWhite"-->
-<!--                android:id="@+id/rcl_filter"-->
-<!--                />-->
-<!--        </LinearLayout>-->
+            android:layout_height="match_parent" />
+
     </RelativeLayout>
 </RelativeLayout>
