--- a/app/src/main/res/layout/activity_block.xml
+++ b/app/src/main/res/layout/activity_block.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".BlockActivity">
     <RelativeLayout
@@ -40,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
+            android:id="@+id/edt_blocker_name"
             android:hint="@string/block_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -58,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
+            android:id="@+id/edt_blocker_number"
             android:hint="@string/phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -66,7 +69,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
         <TextView
             android:textStyle="bold"
             android:textAllCaps="true"
@@ -75,6 +79,47 @@
             android:text="@string/block_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_list_type"
+            android:layout_marginLeft="15dp">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_margin="4dp"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:background="@color/colorWhite"-->
+<!--                >-->
+
+<!--                <de.hdodenhof.circleimageview.CircleImageView-->
+<!--                    android:id="@+id/cigm_type"-->
+<!--                    android:layout_width="33dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_marginLeft="10dp"-->
+<!--                    android:src="@drawable/ic_red_other"-->
+<!--                    app:civ_border_color="@color/colorRed"-->
+<!--                    app:civ_border_width="2dp" />-->
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_type_block"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:textSize="15sp"-->
+<!--                    android:textColor="@color/colorRed"-->
+<!--                    android:layout_marginLeft="15dp"-->
+<!--                    android:text="@string/other"-->
+<!--                    android:layout_gravity="center_vertical"/>-->
+<!--            </LinearLayout>-->
+            <Spinner
+                android:layout_margin="1dp"
+                android:background="@drawable/background_list_type_white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/spin"/>
+        </RelativeLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,6 +127,7 @@
         android:paddingLeft="36dp"
         android:paddingRight="36dp">
         <Button
+            android:id="@+id/btn_save"
             android:textColor="@color/colorWhite"
             android:text="@string/save_contact"
             android:background="@drawable/setting_button"
